# stereo-3d-object-detetion

./: .gitignore  CMakeLists.txt  readme.md
examples/: Rt_calib.cpp  gen_sparities.cpp  object_detection.cpp  stereo_calib.cpp
include/: bbox.h  bbox2box3d.h  box3d.h  stereo_match.h
scripts/data_augmentation/: augmentation.py
scripts/eval/: eval.py  gen_gt.py
scripts/gen_file_list/: gen_file_list.py
scripts/matlab_calib/: matlab_calib.m
scripts/run_bash/: exp0626.sh  exp0701.sh  exp3.sh
src/: bbox.cpp  bbox2box3d.cpp  box3d.cpp  stereo_match.cpp
